--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
+    "@mapbox/polyline": "^1.1.0",
+    "babel-loader": "^8.0.6",
+    "firebase": "^6.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-google-maps": "^9.4.5",
+    "react-scripts": "3.0.1",
+    "rebass": "^3.1.1",
+    "routific": "^0.0.3",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
